part-1-network/internet-gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "omer-devops-igw"
  }
}
